--- a/PortfolioBlog.Api/PortfolioBlog.Api.csproj
+++ b/PortfolioBlog.Api/PortfolioBlog.Api.csproj
@@ -31,4 +31,8 @@
 		<ProjectReference Include="..\PortfolioBlog.Infrastructure\PortfolioBlog.Infrastructure.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
+
 </Project>
